<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorAccent"
    android:orientation="vertical"
    tools:context="e.udayb.converterapp.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/from"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter"
            android:textSize="20sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="buttonSet"
            android:text="METER"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="buttonSet"
            android:text="KILOMETER"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="buttonSet"
            android:text="MILES"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />
    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="buttonSet"
            android:text="INCHES"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="buttonSet"
            android:text="FEET"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="buttonSet"
            android:text="YARDS"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />
    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/to"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/toText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometer"
            android:textSize="20sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonTo"
            android:text="METER"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonTo"
            android:text="KILOMETER"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonTo"
            android:text="MILES"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonTo"
            android:text="INCHES"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonTo"
            android:text="FEET"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonTo"
            android:text="YARDS"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            tools:targetApi="lollipop" />
    </GridLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="buttonBack"
        android:text="@string/back"
        android:textSize="20sp" />

</LinearLayout>
